--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 description = "Shopping cart system backend with FastAPI"
 requires-python = ">=3.10"
 dependencies = [
-    "fastapi>=0.104.0",
+    "fastapi>=0.100.0,<0.109.0",
     "uvicorn[standard]>=0.24.0",
     "sqlalchemy>=2.0.0",
     "pymysql>=1.1.0",
@@ -15,11 +15,14 @@ dependencies = [
     "python-jose[cryptography]>=3.3.0",
     "passlib[bcrypt]>=1.7.4",
     "python-dotenv>=1.0.0",
-    "pydantic>=2.0.0",
+    "pydantic>=2.0.0,<3.0.0",
     "pydantic-settings>=2.0.0",
 ]
 
 [build-system]
 requires = ["hatchling"]
 build-backend = "hatchling.build"
+
+[tool.hatch.build.targets.wheel]
+packages = ["app"]
 
