--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,17 +6,18 @@
     "dev": "vite dev",
     "build": "vite build",
     "preview": "vite preview",
+    "sync": "svelte-kit sync",
     "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
     "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch"
   },
   "devDependencies": {
     "@sveltejs/adapter-auto": "^2.0.0",
-    "@sveltejs/kit": "^1.20.4",
-    "@sveltejs/vite-plugin-svelte": "^2.4.2",
-    "svelte": "^4.0.5",
-    "svelte-check": "^3.4.3",
-    "typescript": "^5.0.0",
-    "vite": "^4.4.2"
+    "@sveltejs/kit": "^1.30.0",
+    "@sveltejs/vite-plugin-svelte": "^2.5.0",
+    "svelte": "^4.2.0",
+    "svelte-check": "^3.6.0",
+    "typescript": "^5.3.0",
+    "vite": "^5.0.0"
   },
   "type": "module"
 }
